Since 0.5.1
-----------

Notes for publishing
--------------------
- don't forget to bump and publish rorm-macro!